# contract-analyzer

./: .gitignore  API_KEYS_SETUP.md  CHANGELOG.md  CONTRACT_ANALYZER_LAUNCHER.html  LOCAL_SETUP.md  Makefile  PROJECT_PROPOSAL.md  PROJECT_STRUCTURE.md  README.md  README_DEPLOY.md  README_RUN.md  RUN_CONTRACT_ANALYZER.bat  Risk Analyzer  check_dependencies.py  create_shareable_links.py  create_tables.py  create_test_user.py  docker-compose.test.yml  docker-compose.yml  init_database.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  requirements_deploy.txt  run_app.py  run_backend.py  run_frontend.py  simple_backend.py  simple_frontend.py  start.sh  start_backend.bat  start_backend.py  start_frontend.bat  start_frontend.py  start_minimal_backend.py  start_services.bat  streamlit_app.py  test_app.py  test_backend_simple.py  (+3 more)
.streamlit/: config.toml
backend/: Dockerfile  pytest.ini
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  contracts.py  monitoring.py
backend/app/api/v1/: __init__.py  contracts.py  health.py  monitoring.py  security.py
backend/app/core/: ai_manager.py  alerting.py  audit.py  auth.py  caching.py  config.py  database.py  distributed_tracing.py  env_manager.py  exceptions.py  file_handler.py  langsmith_integration.py  logging.py  monitoring.py  monitoring_backup.py  observability_config.py  security.py  startup_checks.py
backend/app/middleware/: comprehensive_security.py  error_handler.py  monitoring_middleware.py
backend/app/models/: __init__.py  api_models.py
backend/app/scripts/: seed_database.py  seed_precedents.py  seed_precedents_mock.py
backend/app/services/: __init__.py  analytics_service.py  contract_analysis_service.py  database_seeder.py  document_processor.py  docusign_service.py  gmail_service.py  google_drive_service.py  hubspot_service.py  integration_service.py  local_pdf_signing_service.py  local_storage_service.py  mock_vector_store.py  ollama_service.py  performance_optimizer.py  predictive_service.py  slack_service.py  vector_store.py  workflow_service.py
backend/app/utils/: error_handler.py
backend/app/workflows/: analyzer.py  core.py  state.py
backend/tests/: conftest.py  test_api.py  test_services.py  test_workflows.py
config/: env.template  env_loader.py
docs/: DEPLOYMENT.md  FAQ.md  openapi.yaml
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
docs/user/: USER_GUIDE.md
frontend/: Dockerfile  __init__.py  app.py  config.py  security_config.py
frontend/components/: __init__.py  analytics_dashboard.py  error_display.py  file_upload.py  observability_dashboard.py  progress_indicator.py  results_display.py
frontend/security/: api_security.py  file_security.py
frontend/utils/: __init__.py  api_client.py  validators.py
sample_contracts/: README.md
scripts/: deploy.sh  docker-build.sh  docker-compose-up.sh  docker-run.sh  health_check.py  monitoring.sh  setup.sh  verify_deployment.py
