[tool.poetry]
name = "contract-analyzer"
version = "1.0.0"
description = "AI-powered contract analysis and negotiation assistance with enterprise security"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
streamlit = ">=1.28.0"
requests = ">=2.31.0"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.2"
langchain-community = ">=0.0.20"
langgraph = ">=0.0.20"
langsmith = ">=0.0.77"
openai = ">=1.0.0"
anthropic = ">=0.7.0"
chromadb = ">=0.4.0"
unstructured = ">=0.10.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
plotly = ">=5.17.0"
scikit-learn = ">=1.3.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
python-multipart = ">=0.0.6"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
httpx = ">=0.25.0"
websockets = ">=12.0"
aiohttp = ">=3.8.0"
sqlalchemy = {version = ">=2.0.0", extras = ["asyncio"]}
asyncpg = ">=0.29.0"
psycopg2-binary = ">=2.9.0"
redis = ">=5.0.0"
hiredis = ">=2.2.0"
cryptography = ">=41.0.0"
passlib = {version = ">=1.7.4", extras = ["bcrypt", "argon2"]}
bcrypt = "<4.1.0,>=4.0.1"
pyjwt = ">=2.8.0"
pyotp = ">=2.8.0"
qrcode = {version = ">=7.4.2", extras = ["pil"]}
user-agents = ">=2.2.0"
ipaddress = ">=1.0.23"
python-docx = ">=1.0.0"
python-magic = ">=0.4.0"
pypdf2 = ">=3.0.0"
pypdf = ">=3.0.0"
chardet = ">=5.0.0"
prometheus-client = ">=0.19.0"
structlog = ">=23.2.0"
opentelemetry-api = "<1.22.0,>=1.20.0"
opentelemetry-sdk = "<1.22.0,>=1.20.0"
opentelemetry-instrumentation-fastapi = "<0.43b0,>=0.41b0"
opentelemetry-instrumentation-httpx = "<0.43b0,>=0.41b0"
opentelemetry-exporter-jaeger = "<1.18.0,>=1.16.0"
opentelemetry-exporter-otlp = "<1.22.0,>=1.20.0"
psutil = ">=5.9.0"
memory-profiler = ">=0.60.0"
jinja2 = ">=3.1.0"
python-dotenv = ">=1.0.0"
markdown = ">=3.5.0"
pyyaml = ">=6.0.0"
click = ">=8.1.0"
rich = ">=13.7.0"
reportlab = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.20.0"
pytest-mock = ">=3.10.0"
pytest-cov = ">=4.0.0"
pytest-xdist = ">=3.0.0"
pytest-timeout = ">=2.1.0"
pytest-benchmark = ">=4.0.0"
pytest-html = ">=4.1.1"
pytest-json-report = ">=1.5.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
pylint = ">=2.17.0"
bandit = ">=1.7.0"
safety = ">=2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
