[tool.poetry]
name = "contract-analyzer"
version = "1.0.0"
description = "AI-powered contract analysis and negotiation assistance with enterprise security"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Core web framework
fastapi = ">=0.104.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
streamlit = ">=1.28.0"

# HTTP client
requests = ">=2.31.0"
httpx = ">=0.25.0"

# AI/ML dependencies
langchain = ">=0.1.0"
langchain-openai = ">=0.0.2"
langchain-community = ">=0.0.20"
langgraph = ">=0.0.20"
langsmith = ">=0.0.77"
openai = ">=1.0.0"
anthropic = ">=0.7.0"

# Vector database
chromadb = ">=0.4.0"

# Document processing
unstructured = ">=0.10.0"
python-docx = ">=1.0.0"
pypdf = ">=3.0.0"
python-magic = ">=0.4.0"

# Data processing
pandas = ">=2.0.0"
numpy = ">=1.24.0"

# Configuration and validation
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.0"

# Security and authentication
python-multipart = ">=0.0.6"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
passlib = {version = ">=1.7.4", extras = ["bcrypt", "argon2"]}
bcrypt = "<4.1.0,>=4.0.1"
pyjwt = ">=2.8.0"
cryptography = ">=41.0.0"

# Database
sqlalchemy = {version = ">=2.0.0", extras = ["asyncio"]}
asyncpg = ">=0.29.0"
psycopg2-binary = ">=2.9.0"

# Caching
redis = ">=5.0.0"

# Monitoring and observability
prometheus-client = ">=0.19.0"
structlog = ">=23.2.0"
opentelemetry-api = "<1.22.0,>=1.20.0"
opentelemetry-sdk = "<1.22.0,>=1.20.0"
opentelemetry-instrumentation-fastapi = "<0.43b0,>=0.41b0"
opentelemetry-instrumentation-httpx = "<0.43b0,>=0.41b0"

# Utilities
click = ">=8.1.0"
rich = ">=13.7.0"
chardet = ">=5.0.0"
psutil = ">=5.9.0"
jinja2 = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.0.0"
pytest-asyncio = ">=0.20.0"
pytest-mock = ">=3.10.0"
pytest-cov = ">=4.0.0"

# Code quality
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

# Security
bandit = ">=1.7.0"
safety = ">=2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend", "frontend", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]